--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-streamlit
+pandas==2.2.0
+requests==2.32.0
+streamlit==1.45.0
+numpy==1.26.3
+google-generativeai==0.7.2
+mplsoccer==1.4.0
+playwright==1.52.0
